--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
                 <div id="result">Please enter valid weights and grades.</div>
             </div>
         </div>
-        <script src="./script.js"></script>
+        <script src="https://raw.githubusercontent.com/MinenMaster/gradecalculator/refs/heads/main/script.js"></script>
     </body>
 </html>
