alright now it should work

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Grade Calculator</title>
-        <link rel="stylesheet" href="./style.css" />
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <div class="container">
@@ -36,6 +36,6 @@
                 <div id="result">Please enter valid weights and grades.</div>
             </div>
         </div>
-        <script src="https://raw.githubusercontent.com/MinenMaster/gradecalculator/refs/heads/main/script.js"></script>
+        <script src="./script.js" type="text/javascript"></script>
     </body>
 </html>
